[gd_scene load_steps=5 format=2]

[ext_resource path="res://Server.tscn" type="PackedScene" id=1]
[ext_resource path="res://LoadBalancer.gd" type="Script" id=2]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Server" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ConfigWindow" parent="Meta" index="1"]
margin_left = 64.0
margin_top = -31.0
margin_right = 342.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" parent="Meta/ConfigWindow" index="0"]
size_flags_horizontal = 3

[node name="Servers" type="Control" parent="Meta/ConfigWindow" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="static_backend_config" type="TextEdit" parent="Meta/ConfigWindow/Servers" index="0"]
modulate = Color( 1, 0.196078, 0.196078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = -1.0
margin_right = -3.0
margin_bottom = -76.0
text = "<server_ip_1>
<server_ip_2>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBackend" type="Label" parent="Meta/ConfigWindow/Servers" index="1"]
margin_right = 51.0
margin_bottom = 14.0
text = "/assets/*
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dynamic_backend_config" type="TextEdit" parent="Meta/ConfigWindow/Servers" index="2"]
modulate = Color( 1, 0.196078, 0.196078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = 49.0
margin_right = -3.0
margin_bottom = -26.0
text = "<server_ip_1>
<server_ip_2>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DynamicBackend" type="Label" parent="Meta/ConfigWindow/Servers" index="3"]
margin_top = 50.0
margin_right = 59.0
margin_bottom = 81.0
text = "/api/*
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveButton" type="Button" parent="Meta/ConfigWindow/Servers" index="4"]
margin_left = 1.0
margin_top = 88.0
margin_right = 42.0
margin_bottom = 108.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" parent="Meta/ToggleConfig" index="0"]
custom_fonts/font = SubResource( 1 )
[connection signal="pressed" from="Meta/ConfigWindow/Servers/saveButton" to="." method="_on_saveButton_pressed"]
